--- a/2번 문제.md
+++ b/2번 문제.md
@@ -1,1 +1,27 @@
+#### TCP와 UDP의 차이점
 
+|                | TCP                | UDP                  |
+| -------------- | ------------------ | -------------------- |
+| 연결방식       | 연결 지향 프로토콜 | 비연결 지향 프로토콜 |
+| 패킷 교환 방식 | 가상 회선 방식     | 데이터 그램 방식     |
+| 전송 순서      | 보장               | 보장하지 않음        |
+| 수신 여부 확인 | 확인               | 확인하지 않음        |
+| 통신 방식      | 1:1 통신           | 1:1 / 1:N / N:N      |
+| 신뢰성         | 높음               | 낮음                 |
+| 속도           | 느림               | 빠름                 |
+
+<br>
+
+#### TCP (Transmission Control Protocol)
+
+- 클라이언트와 서버가 연결된 상태에서 데이터를 주고 받는 프로토콜 (**연결 지향 프로토콜**)
+- 데이터의 전송 순서를 보장, 신뢰성 있는 데이터를 전송
+- 1:1 통신만 가능, UDP보다 데이터 전송 속도가 느림
+
+<br>
+
+#### UDP (User Datagram Protocol)
+
+- 데이터를 주고 받을 때 연결 절차를 거치지 않고 발신자가 일방적으로 데이터를 발신 (**비연결 지향 프로토콜**)
+- 데이터 경계를 구분, 패킷 오버헤드가 적어 네트워크 부하가 감소
+- 데이터의 신뢰성이 없음
