--- a/3번 문제.md
+++ b/3번 문제.md
@@ -1,1 +1,22 @@
+#### 웹브라우저 동작 과정
 
+1. 사용자가 웹 브라우저에 네이버 주소를 입력
+2. 도메인 네임 부분을 DNS 서버에서 검색
+3. DNS 서버에서 네이버 도메인 네임에 해당하는 IP 주소를 찾아 네이버 URL 정보와 함께 전달
+4. HTTP 프로토콜을 사용해 HTTP Request Message를 생성함
+5. HTTP Request Message를 TCP 프로토콜을 사용해 인터넷을 거쳐 네이버 IP 주소의 컴퓨터로 전송
+6. HTTP Request Message는 HTTP 프로토콜을 사용하여 웹 페이지 URL 정보로 변환
+7. 웹 서버는 웹 페이지 URL에 해당하는 데이터를 검색
+8. 검색한 웹 페이지 데이터는 다시 HTTP 프로토콜을 사용하여 HTTP Response Message 생성
+9. HTTP Response Message를 TCP 프로토콜을 사용해 인터넷을 거쳐 네이버 IP 주소의 컴퓨터로 전송
+10. HTTP Response Message는 HTTP 프로토콜을 사용하여 웹 페이지 데이터로 변환
+11. 변환한 웹 페이지 데이터는 웹 브라우저로 출력하여 사용자가 볼 수 있음
+
+
+
+<br>
+
+
+
+<img src="http://tcpschool.com/lectures/img_webbasic_10.png"/>
+출처 - TCP School
