--- a/4번 문제.md
+++ b/4번 문제.md
@@ -1,1 +1,40 @@
+# 파이썬
+
+
+
+#### 실행 속도가 느리다.
+
+- 인터프리터는 코드를 한 줄 씩 실행하기 때문에 속도가 느리다.
+- GIL(Global Interpreter Lock)은 2개 이상의 cpi 코어가 있는 다중 스레드 아키텍처에서도 하나의 스레드만 실행한다.
+
+<br>
+
+#### 실행 속도가 느리다모바일 애플리케이션 개발이 적합하지 않다.
+
+- Android: 자바 or 코틀린
+- iOS: Swift
+
+<br>
+
+#### 파이썬의 편리함때문에 다른 언어를 배우는 데 어려움을 겪을 수 있다.
+
+- 쉽게 파이썬을 배울 수 있는 장점이 C, C++, Java 등 다른 언어를 배울 때 적응하기 어려울 수 있다.
+
+<br>
+
+#### 메모리를 많이 소비한다.
+
+<br>
+
+#### 엔터프라이즈 개발에서 일반적으로 사용되지 않는다.
+
+- JDBC, ODBC와 같은 기술과 비교하여, 파이썬의 DB access layer는 원시적이다. 
+- 복잡한 legacy 데이터의 상호 작용이 필요한 기업에서는 사용되지 않는다.
+- multi-processor 지원의 부재, 상업적 지원 부재, 모바일 애플리케이션 개발에서 약점이 있다.
+- 동적으로 데이터 타입이 지정되기때문에 디자인에 제한이 있을 수 있다.
+
+<br>
+
+출처 - https://pythonistaplanet.com/disadvantages-of-python/
+
 
