--- a/5번 문제.md
+++ b/5번 문제.md
@@ -1,1 +1,26 @@
+#### 파이썬 - 리스트
 
+- Built-in mutable sequence
+- argument가 없으면 생성자는 empty list를 생성
+- 입력 순서가 유지되고, 동적 배열로 구현되어 있다.
+- 다양한 method 사용 가능
+  - append
+    - 마지막 순서에 원소 추가
+  - clear
+    - 리스트에 있는 모든 원소 삭제
+  - copy
+    - list 전체를 얕은 복사
+  - count
+    - list의 원소 개수
+  - extend
+    - 추가하려는 원소의 수 만큼 확장
+  - insert
+    - a번째 위치에 b를 추가
+  - pop
+    - 마지막 번째 원소를 꺼내고, 리스트에서 삭제
+  - remove
+    - 리스트에서 첫 번째로 나오는 "입력값"을 삭제
+  - reverse
+    - 리스트를 역순으로 변경
+  - sort
+    - 리스트의 원소들을 순서대로 정렬
