--- a/1번 문제.md
+++ b/1번 문제.md
@@ -1,1 +1,22 @@
+#### 동시성
 
+- 여러 사용자가 동시에 데이터 베이스의 데이터를 수정할 수 있도록 하려면 특정 사용자의 수정 내용이 다른 사용자의 수정 내용에 영향을 주지 않도록 제어 시스템을 구현
+- 동시성 제어는 동시성 제어 구현 방법에 따라 두 가지로 분류
+
+<br>
+
+#### 비관적 동시성 제어
+
+- 다른 사용자에게 영향을 주는 데이터 수정은 수행할 수 없도록 하는 잠금 방식
+- 한 사용자가 잠금을 유발하는 동작을 수행하면 다른 사용자는 이 소유자가 잠금을 해제할 때까지 해당 잠금과 충돌하는 동작을 수행할 수 없음 
+- 동시성 충돌이 발생하는 경우 잠금을 사용하여 데이터를 보호하는 비용이 트랜잭션을 롤백하는 비용보다 작고 데이터에 대한 경합이 치열한 환경에 주로 사용되기 때문에 비관적 제어라 함
+
+<br>
+
+#### 낙관적 동시성 제어
+
+- 낙관적 동시성 제어에서는 사용자가 데이터를 읽을 때 해당 데이터를 잠그지 않음
+- 사용자가 데이터를 업데이트할 때는 다른 사용자가 해당 데이터를 읽은 후 변경하지 않았는지 검사가 진행 
+- 다른 사용자가 데이터를 업데이트한 경우에는 오류가 발생 
+- 일반적으로 오류를 수신한 사용자의 트랜잭션이 롤백되고 다시 시작 
+- 가끔씩 트랜잭션을 롤백하는 비용이 데이터를 읽을 때 잠그는 비용보다 작고 데이터에 대한 경합이 낮은 환경에 주로 사용되기 때문에 낙관적 제어라 함
